// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup for concern suggestion 1`] = `
<div
  className="background"
  onClick={undefined}
>
  <div
    className="content smallContentPadding"
    onClick={[Function]}
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle"
        >
          Add as active or inactive concern?
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select noValue"
            disabled={undefined}
            name="concernType"
            onChange={[Function]}
            required={undefined}
            value=""
          >
            <option
              disabled={true}
              value=""
            >
              Select a concern type
            </option>
            <option
              disabled={undefined}
              value="active"
            >
              Active concern
            </option>
            <option
              disabled={undefined}
              value="inactive"
            >
              Inactive concern
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <button
            className="button small"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="flex"
            >
              <span>
                Cancel
              </span>
            </span>
          </button>
          <button
            className="button small"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="flex"
            >
              <span />
            </span>
          </button>
          &gt;
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders popup for goal suggestion 1`] = `
<div
  className="background"
  onClick={undefined}
>
  <div
    className="content smallContentPadding"
    onClick={[Function]}
  >
    <div
      className="acceptModalContent"
    >
      <div
        className="acceptModalHeader"
      >
        <div
          className="acceptModalDismissButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="acceptModalBody"
      >
        <div
          className="acceptModalTitle noMargin"
        >
          Add this goal to a concern
        </div>
        <div
          className="acceptModalSubtitle"
        >
          Select an existing patient concern, a suggested concern, or create a new one
        </div>
        <div
          className="acceptModalDropdown"
        >
          <select
            className="select noValue"
            disabled={undefined}
            name="concernId"
            onChange={[Function]}
            required={undefined}
            value=""
          >
            <option
              disabled={true}
              value=""
            >
              Select a concern
            </option>
          </select>
        </div>
        <div
          className="acceptModalInput hidden"
        >
          <select
            className="select noValue"
            disabled={undefined}
            name="concernType"
            onChange={[Function]}
            required={undefined}
            value=""
          >
            <option
              disabled={true}
              value=""
            >
              Select a concern type
            </option>
            <option
              disabled={undefined}
              value="active"
            >
              Active concern
            </option>
            <option
              disabled={undefined}
              value="inactive"
            >
              Inactive concern
            </option>
          </select>
        </div>
        <div
          className="acceptModalButtons"
        >
          <button
            className="button white"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="flex"
            >
              <span>
                Cancel
              </span>
            </span>
          </button>
          <button
            className="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="flex"
            >
              <span>
                Add to care plan
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
